<resources>
    <string name="app_name">Codewars</string>
    <string name="app_pesquisar">Pesquisar</string>
    <string name="app_user_name">Name</string>
    <string name="app_user_rank">Rank: #%1$d</string>
    <string name="app_user_best_language">Best language: %1$d</string>
    <string name="app_order_by_rank">Order by Rank</string>
    <string name="app_order_by_time">Order by Time of Look up</string>
    <string name="app_user_detail">User Detail</string>
    <string name="app_home">Home</string>
    <string name="app_name_user">Name: %1$s</string>
    <string name="app_completed">Completed</string>
    <string name="app_authored">Authored</string>
    <string name="app_detail_home">Home</string>
    <string name="app_detail_completed">Completed</string>
    <string name="app_detail_authored">Authored</string>
    <string name="app_user_clan">Clan: %1$s</string>
    <string name="app_user_skills">Skills: %1$s</string>
    <string name="app_progress">Progress</string>
    <string name="app_rank">Rank: %1$s</string>
    <string name="app_honor">Honor: %1$d</string>
    <string name="app_leaderboard_position">Leaderboard Position: #%1$d</string>
    <string name="app_languages">Languages</string>
    <string name="app_total_languages_trained">Total Languages Trained: %1$d</string>
    <string name="app_highest_trained">Highest Trained: %1$s</string>
    <string name="app_most_recent">Most Recent</string>
    <string name="app_language_name">Language Name</string>
    <string name="app_score">Score: %1$d</string>
    <string name="app_title">Title</string>
    <string name="app_completed_languages">Completed Languages: %1$s</string>
    <string name="app_completed_at">Completed: %1$s</string>
</resources>
