<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:id="@+id/action_search"
        android:title="@string/app_pesquisar"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <group android:checkableBehavior="single">
        <item android:id="@+id/action_order_rank"
              android:title="@string/app_order_by_rank"
              app:showAsAction="never"
        />
        <item android:id="@+id/action_order_time"
              android:title="@string/app_order_by_time"
              app:showAsAction="never"
              android:checked="true"
        />
    </group>
</menu>