<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:id="@+id/container"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="9dp"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
            >
                <TextView
                        android:id="@+id/lblTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_title"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
                <TextView
                        android:id="@+id/lblCompletedLanguages"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/app_completed_languages"
                        android:textSize="12sp"
                />
                <TextView
                        android:id="@+id/lblCompletedAt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/app_completed_at"
                        android:textSize="12sp"
                />
            </LinearLayout>
        </LinearLayout>
</LinearLayout>