<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".features.MainActivity">
    <TextView
            android:text="@string/app_language_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblLanguage" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/app_rank"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:id="@+id/lblRank"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="48dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lblLanguage" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.754"/>
    <TextView
            android:text="@string/app_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblScore" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/lblLanguage"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
</android.support.constraint.ConstraintLayout>